[tool.poetry]
name = "hw07"
version = "0.1.0"
description = ""
authors = ["Artem Dorofeev <arem.dorofeev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
faker = "^17.5.0"
sqlalchemy = "^2.0.4"
alembic = "^1.9.4"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"